--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<ul>
 			<li><a href="day_01/index.html">Day 1 - Expanding Cards</a></li>
 			<li><a href="day_02/index.html">Day 2 - Progress Steps</a></li>
+			<li><a href="day_03/index.html">Day 3 - Rotating Navigation</a></li>
 		</ul>
 	</body>
 </html>
