--- a/day_04/index.html
+++ b/day_04/index.html
@@ -12,15 +12,13 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>50 Projects 50 Days Challenge by Bahram Movlanov</title>
+		<title>Hidden Search</title>
 	</head>
 	<body>
-		<h1>50 Projects 50 Days Challenge</h1>
-		<h3>Projects:</h3>
-		<ul>
-			<li><a href="day_01">Day 1 - Expanding Cards</a></li>
-			<li><a href="day_02">Day 2 - Progress Steps</a></li>
-			<li><a href="day_03">Day 3 - Rotating Navigation</a></li>
-		</ul>
+		<div class="search">
+			<input type="text" class="input" placeholder="Search..." />
+			<button class="btn"><i class="fas fa-search"></i></button>
+		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
