--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li><a href="day_01">Day 1 - Expanding Cards</a></li>
 			<li><a href="day_02">Day 2 - Progress Steps</a></li>
 			<li><a href="day_03">Day 3 - Rotating Navigation</a></li>
+			<li><a href="day_04">Day 4 - Hidden Search</a></li>
 		</ul>
 	</body>
 </html>
