--- a/day_05/index.html
+++ b/day_05/index.html
@@ -12,17 +12,11 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>50 Projects 50 Days Challenge by Bahram Movlanov</title>
+		<title>Blurry Loading</title>
 	</head>
 	<body>
-		<h1>50 Projects 50 Days Challenge</h1>
-		<h3>Projects:</h3>
-		<ul>
-			<li><a href="day_01">Day 1 - Expanding Cards</a></li>
-			<li><a href="day_02">Day 2 - Progress Steps</a></li>
-			<li><a href="day_03">Day 3 - Rotating Navigation</a></li>
-			<li><a href="day_04">Day 4 - Hidden Search</a></li>
-			<li><a href="day_05">Day 5 - Blurry Load</a></li>
-		</ul>
+		<section class="bg"></section>
+		<div class="loading-text">0%</div>
+		<script src="script.js"></script>
 	</body>
 </html>
