--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a href="day_03">Day 3 - Rotating Navigation</a></li>
 			<li><a href="day_04">Day 4 - Hidden Search</a></li>
 			<li><a href="day_05">Day 5 - Blurry Load</a></li>
+			<li><a href="day_06">Day 6 - Scroll Animation</a></li>
 		</ul>
 	</body>
 </html>
