--- a/day_07/index.html
+++ b/day_07/index.html
@@ -12,19 +12,19 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>50 Projects 50 Days Challenge by Bahram Movlanov</title>
+		<title>Split Landing Page</title>
 	</head>
 	<body>
-		<h1>50 Projects 50 Days Challenge</h1>
-		<h3>Projects:</h3>
-		<ul>
-			<li><a href="day_01">Day 1 - Expanding Cards</a></li>
-			<li><a href="day_02">Day 2 - Progress Steps</a></li>
-			<li><a href="day_03">Day 3 - Rotating Navigation</a></li>
-			<li><a href="day_04">Day 4 - Hidden Search</a></li>
-			<li><a href="day_05">Day 5 - Blurry Load</a></li>
-			<li><a href="day_06">Day 6 - Scroll Animation</a></li>
-			<li><a href="day_07">Day 7 - Split Landing Page</a></li>
-		</ul>
+		<div class="container">
+			<div class="split left">
+				<h1>Playstation 5</h1>
+				<a href="#" class="btn">Buy Now</a>
+			</div>
+			<div class="split right">
+				<h1>XBox Series X</h1>
+				<a href="#" class="btn">Buy Now</a>
+			</div>
+		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
