--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li><a href="day_05">Day 5 - Blurry Load</a></li>
 			<li><a href="day_06">Day 6 - Scroll Animation</a></li>
 			<li><a href="day_07">Day 7 - Split Landing Page</a></li>
+			<li><a href="day_08">Day 8 - Form Input Wave</a></li>
 		</ul>
 	</body>
 </html>
