--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<li><a href="day_06">Day 6 - Scroll Animation</a></li>
 			<li><a href="day_07">Day 7 - Split Landing Page</a></li>
 			<li><a href="day_08">Day 8 - Form Input Wave</a></li>
+			<li><a href="day_09">Day 9 - Sound Board</a></li>
 		</ul>
 	</body>
 </html>
