--- a/day_00/index.html
+++ b/day_00/index.html
@@ -15,6 +15,9 @@
 		<title>My Project</title>
 	</head>
 	<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<h1>Project Starter</h1>
 		<script src="script.js"></script>
 	</body>
