--- a/day_01/index.html
+++ b/day_01/index.html
@@ -15,6 +15,9 @@
 		<title>Expanding Cards</title>
 	</head>
 	<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<div class="container">
 			<div
 				class="panel active"
