--- a/day_09/index.html
+++ b/day_09/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Sound Board</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<audio id="applause" src="sounds/applause.mp3"></audio>
 		<audio id="boo" src="sounds/boo.mp3"></audio>
 		<audio id="gasp" src="sounds/gasp.mp3"></audio>
