--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
 		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>50 Projects 50 Days Challenge by Bahram Movlanov</title>
+		<style>
+			a:link,
+			a:visited {
+				text-decoration: none;
+				color: black;
+				font-weight: bolder;
+			}
+
+			a:hover {
+				color: darkgray;
+			}
+		</style>
 	</head>
 	<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<h1>50 Projects 50 Days Challenge</h1>
 		<h3>Projects:</h3>
 		<ul>
