--- a/day_02/index.html
+++ b/day_02/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Progress Steps</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<div class="container">
 			<div class="progress-container">
 				<div class="progress" id="progress"></div>
