--- a/day_04/index.html
+++ b/day_04/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Hidden Search</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<div class="search">
 			<input type="text" class="input" placeholder="Search..." />
 			<button class="btn"><i class="fas fa-search"></i></button>
