--- a/day_05/index.html
+++ b/day_05/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Blurry Loading</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<section class="bg"></section>
 		<div class="loading-text">0%</div>
 		<script src="script.js"></script>
