--- a/day_06/index.html
+++ b/day_06/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Scroll Animation</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<h1>Scroll to see animation</h1>
 		<div class="box"><h2>Content</h2></div>
 		<div class="box"><h2>Content</h2></div>
