--- a/day_07/index.html
+++ b/day_07/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Split Landing Page</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<div class="container">
 			<div class="split left">
 				<h1>Playstation 5</h1>
