--- a/day_08/index.html
+++ b/day_08/index.html
@@ -14,7 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Form Input Wave</title>
 	</head>
-	<body>
+		<body>
+		<nav class="nav">
+			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
+		</nav>
 		<div class="container">
 			<h1>Please Login</h1>
 			<form>
