--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>50 Projects 50 Days Challenge by Bahram Movlanov</title>
 		<style>
+			ul {
+				list-style-type: none;
+			}
 			a:link,
 			a:visited {
 				text-decoration: none;
