--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<li><a href="day_07">Day 7 - Split Landing Page</a></li>
 			<li><a href="day_08">Day 8 - Form Input Wave</a></li>
 			<li><a href="day_09">Day 9 - Sound Board</a></li>
+			<li><a href="day_10">Day 10 - Dad Jokes</a></li>
 		</ul>
 	</body>
 </html>
