--- a/day_10/index.html
+++ b/day_10/index.html
@@ -18,7 +18,11 @@
 		<nav class="nav">
 			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
 		</nav>
-		<h1>Project Starter</h1>
+		<div class="container">
+			<h3>Do Not Laugh Challenge</h3>
+			<div id="joke" class="joke">// Joke Goes here</div>
+			<button id="jokeBtn" class="btn">Get Another Joke</button>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
