--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	</head>
 	<body>
 		<h1>50 Projects 50 Days Challenge</h1>
+		<a href="https://github.com/movlan/50day">Github</a>
 		<h3>Projects:</h3>
 		<ul>
 			<li><a href="day_01">Day 1 - Expanding Cards</a></li>
