--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<li><a href="day_08">Day 8 - Form Input Wave</a></li>
 			<li><a href="day_09">Day 9 - Sound Board</a></li>
 			<li><a href="day_10">Day 10 - Dad Jokes</a></li>
+			<li><a href="day_10">Day 11 - Event KeyCodes</a></li>
 		</ul>
 	</body>
 </html>
