--- a/day_11/index.html
+++ b/day_11/index.html
@@ -12,13 +12,15 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>My Project</title>
+		<title>Event KeyCodes</title>
 	</head>
 	<body>
 		<nav class="nav">
 			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
 		</nav>
-		<h1>Project Starter</h1>
+		<div id="insert">
+			<div class="key">Press any key to get the keyCode and code</div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
