--- a/day_13/index.html
+++ b/day_13/index.html
@@ -12,13 +12,17 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>My Project</title>
+		<title>Random Choice Picker</title>
 	</head>
 	<body>
 		<nav class="nav">
 			<a class="nav-link" href="https://www.50day.bahram.dev/"> < Back</a>
 		</nav>
-		<h1>Project Starter</h1>
+		<div class="container">
+			<h3>Enter all of the choices divided by comma ' , '<br />Press enter when done</h3>
+			<textarea id="textarea" placeholder="Enter choices here..."></textarea>
+			<div id="tags"></div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
