--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 			<li><a href="day_08">Day 8 - Form Input Wave</a></li>
 			<li><a href="day_09">Day 9 - Sound Board</a></li>
 			<li><a href="day_10">Day 10 - Dad Jokes</a></li>
-			<li><a href="day_10">Day 11 - Event KeyCodes</a></li>
+			<li><a href="day_11">Day 11 - Event KeyCodes</a></li>
+			<li><a href="day_12">Day 12 - FAQ</a></li>
+			<li><a href="day_13">Day 13 - Random Choice Picker</a></li>
 		</ul>
 	</body>
 </html>
